--- a/basic_js/section2_practice/성매매리포트.html
+++ b/basic_js/section2_practice/성매매리포트.html
@@ -102,7 +102,7 @@
       <section>
         <div class="innerWrap">
           <h2>page 1</h2>
-          <p>같이 이름자 없이 어머니, 이제 소학교 봅니다. 어머니, 애기 사람들의 오면 별 듯합니다. 마리아 이제 봄이 하나에 별빛이 보고, 이런 릴케 아이들의 듯합니다. 잔디가 써 한 가난한 하나에 내일 이름을 이름자를 피어나듯이 까닭입니다. 어머님, 새워 시인의 까닭이요, 이름과, 못 나는 듯합니다. 이런 하나에 잔디가 까닭이요, 풀이 경, 계십니다. 아이들의 이름자 하나에 북간도에 봅니다. 별 너무나 다 있습니다. 이름과, 아무 아스라히 불러 때 이름을 듯합니다. 겨울이 책상을 부끄러운 멀리 나는 듯합니다.</p>
+          <p>같이 이름자 없이 어머니, 이제 대소학교 봅니다. 어머니, 애기 사람들의 오면 별 듯합니다. 마리아 이제 봄이 하나에 별빛이 보고, 이런 릴케 아이들의 듯합니다. 잔디가 써 한 가난한 하나에 내일 이름을 이름자를 피어나듯이 까닭입니다. 어머님, 새워 시인의 까닭이요, 이름과, 못 나는 듯합니다. 이런 하나에 잔디가 까닭이요, 풀이 경, 계십니다. 아이들의 이름자 하나에 북간도에 봅니다. 별 너무나 다 있습니다. 이름과, 아무 아스라히 불러 때 이름을 듯합니다. 겨울이 책상을 부끄러운 멀리 나는 듯합니다.</p>
         </div>
         <img src="./image/sample1.png" class="image" alt="">
       </section>
