color shoe page paging practice

--- a/basic_js/section2_practice/colorshoe.html
+++ b/basic_js/section2_practice/colorshoe.html
@@ -99,7 +99,7 @@
             pageChangeFunc();
         });
 
-        // 버튼 누르면 페이지 이동하는 부분 구현하기!
+        // 버튼 누르면 페이지 이동하는 부분 구현하기
 
         function pageChangeFunc(){
 
